# embedded-ide

./: .gitignore  .travis.yml  LICENSE  MainWindow.ui  README.md  about.txt  aboutdialog.cpp  aboutdialog.ui  appconfig.cc  appconfig.cpp  appconfig.h  appmenu.cpp  appmenu.h  appmenu.ui  binaryviewer.cpp  binaryviewer.h  buildconfig.cpp  buildconfig.h  buildmanager.cpp  buildmanager.h  clangcodecontext.cpp  clangcodecontext.h  codeeditor.cpp  codeeditor.h  codetemplate.cpp  codetemplate.h  codetexteditor.cpp  codetexteditor.h  componentitemwidget.ui  componentsdialog.ui  configdialog.cpp  configdialog.h  configdialog.ui  configuredialog.cpp  configuredialog.h  configuredialog.ui  consoleinterceptor.cpp  debuginterface.cpp  debuginterface.h  debuginterface.ui  (+107 more)
astyle/: astyle.pri
ci/: BuildQSCI.mk  embedded_ide-config.json.unix  embedded_ide-config.json.win  embedded_ide.hardconf.unix  embedded_ide.hardconf.win  extract-qt-installer  qt-installer-silent.js  qt5124-linux-packages  qt5129-linux-packages  tests-ci.sh  tests-environment.sh
docs/: DIFF_TEMPLATES.md  TOOL_CMDLINE.md
gdbdebugger/: gdbdebugger.cpp  gdbdebugger.h  gdbdebugger.pri
i18n/: es.qm  es.ts  zh.qm  zh.ts
ide/: .gitignore  aboutdialog.cpp  aboutdialog.ui  appconfig.cpp  appconfig.h  bannerwidget.h  binaryviewer.cpp  binaryviewer.h  buildmanager.cpp  buildmanager.h  buttoneditoritemdelegate.h  childprocess.cpp  childprocess.h  clangautocompletionprovider.cpp  clangautocompletionprovider.h  clangcodecontext.cpp  clangcodecontext.h  clangdmanager.cpp  clangdmanager.h  codeeditor.cpp  codeeditor.h  codetexteditor.cpp  codetexteditor.h  combodocumentview.cpp  combodocumentview.h  componentitemwidget.cpp  componentitemwidget.ui  componentsdialog.cpp  configdialog.ui  configwidget.cpp  configwidget.h  configwidget.ui  consoleinterceptor.cpp  consoleinterceptor.h  cpptexteditor.cpp  cpptexteditor.h  debugui.cpp  dialogconfigworkspace.cpp  documentarea.cpp  documentmanager.cpp  (+91 more)
mapview/: main.cpp  mapview.pri  mapview.pro  mapviewmodel.cpp  mapviewmodel.h
old/: clangcodecontext.cpp  codeeditor.cpp  combodocumentview.cpp  combodocumentview.h  componentsdialog.h  configdialog.cpp  debugui.h  documentarea.h  filepropertiesdialog.cpp  filepropertiesdialog.h  findinfilesdialog.cpp  formfindreplace.h  ide.pro  mainwindow.h  projectnewdialog.cpp  taglist.h  templatedownloader.cpp
qgdb/: com.cpp  com.h  config.h  core.cpp  core.h  gdb_default_profile.ini  ini.cpp  ini.h  log.cpp  log.h  opendialog.cpp  opendialog.h  opendialog.ui  qgdb.pri  settings.cpp  settings.h  tree.cpp  tree.h  util.cpp  util.h  version.h
qtc_gdbmi/: qtc_gdbmi.pri
qtdesigner-gdb/: breakhandler.cpp  breakhandler.h  breakpoint.cpp  breakpoint.h  elfreader.cpp  elfreader.h  gdbmi.cpp  gdbmi.h
qtdialog/: main.cpp  qtdialog.pro
qtshdialog/: main.cpp  qtshdialog.pro
qtsourceview/: CMakeLists.txt  ChangeLog  Doxyfile  qtsourceview.dox  qtsourceview.pro  readme
qtsourceview/demos/: CMakeLists.txt
qtsourceview/demos/demo-obsolete/: colorsmodel.cpp  colorsmodel.h  configdialog.ui  demo4-debug.pro  demo4.pro  editorconfig.cpp  editorconfig.h  filemessage.ui  findwidget.ui  gotolinewidget.ui  main.cpp  mainwindow.ui  mainwindowimpl.cpp  mainwindowimpl.h  qsveditor.cpp  qsveditor.h  qsveditorpanel.cpp  qsveditorpanel.h  qsvlineedit.cpp  qsvlineedit.h  qsvprivateblockdata.cpp  qsvprivateblockdata.h  replacewidget.ui  textlines.qrc  transparentwidget.cpp  transparentwidget.h
qtsourceview/demos/demo-qate/: demo-qate.cpp  demo-qate.pro
qtsourceview/demos/demo-qate2/: demo-qate2.cpp  demo-qate2.h
qtsourceview/demos/demo-qate4/: demo-qate4.cpp  demo-qate4.h  qatehighlighter.cpp  qatehighlighter.h
qtsourceview/demos/demo1/: CMakeLists.txt  demo1.pro  main1.cpp
qtsourceview/demos/demo2/: CMakeLists.txt  demo2.pro  main2.cpp  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui
qtsourceview/demos/demo3/: CMakeLists.txt  demo3.pro  demo3.qrc  main3.cpp  mainwindow3.cpp  mainwindow3.h  mainwindow3.ui
qtsourceview/demos/demo4/: bannermessage.ui  demo4.pro  main4.cpp  mainwindow4.h  qsvdefaulthighlighter.cpp  qsvdefaulthighlighter.h  qsvsyntaxhighlighterbase.cpp  qsvsyntaxhighlighterbase.h  qsvtextedit.cpp  qsvtextedit.h  qsvtextoperationswidget.h  readme.txt  replaceform.ui
qtsourceview/demos/demo5/: demo5.pro  demo5.qrc  main5.cpp  readme.txt
qtsourceview/demos/demo6/: demo6.pro  main6.cpp
qtsourceview/src/qate/: CMakeLists.txt  basetextdocumentlayout.h  defaultcolors.cpp  defaultcolors.h  highlightdefinition.h  highlightdefinitionhandler.cpp  highlightdefinitionhandler.h  highlightdefinitionmanager.cpp  highlightdefinitionmanager.h  highlightdefinitionmetadata.h  mimedatabase.cpp  mimedatabase.h  qateblockdata.h
qtsourceview/src/qate/qtconcurrent/: multitask.h
qtsourceview/src/qsvsh/: CMakeLists.txt  debug_info.h  qorderedmap.h  qsvcolordef.cpp  qsvcolordef.h  qsvcolordeffactory.cpp  qsvcolordeffactory.h  qsvlangdef.cpp  qsvlangdef.h  qsvlangdeffactory.cpp  qsvlangdeffactory.h  qsvsyntaxhighlighter.cpp  qsvsyntaxhighlighter.h  qtsourceview.qrc
refactor-ide/: appconfig.cpp  appconfig.h  binaryviewer.cpp  binaryviewer.h  buildmanager.cpp  buildmanager.h  childprocess.h  clangautocompletionprovider.cpp  clangautocompletionprovider.h  codetexteditor.cpp  codetexteditor.h  configwidget.cpp  configwidget.h  configwidget.ui  consoleinterceptor.cpp  consoleinterceptor.h  cpptexteditor.cpp  cpptexteditor.h  documentmanager.cpp  documentmanager.h  externaltoolmanager.cpp  externaltoolmanager.h  externaltoolmanager.ui  filereferencesdialog.cpp  filereferencesdialog.h  filereferencesdialog.ui  filesystemmanager.cpp  filesystemmanager.h  findinfilesdialog.cpp  findinfilesdialog.h  findinfilesdialog.ui  findlineedit.cpp  findlineedit.h  formfindreplace.h  icodemodelprovider.cpp  icodemodelprovider.h  idocumenteditor.cpp  idocumenteditor.h  main.cpp  mainwindow.cpp  (+26 more)
resources/: resources.qrc
socketwaiter/: README.md  main.cpp  socketwaiter.pro
styles/: Default.xml
templates/: ciaa-lpcopen.template  gcc-exec.template  generic-make.template  (+3 more)
(+169 files in other folders)
